# typora-gear-academy

.github/workflows/: main.yml
12/tests/: basic.rs
pebble-game/: Cargo.toml  build.rs
pebble-game/io/: Cargo.toml
pebble-game/io/src/: lib.rs
pebble-game/src/: auxilar.rs  lib.rs
pebble-game/tests/: basic.rs
