[package]
name = "pebble-game"
version = "0.1.0"
edition = "2021"

[dependencies]
gstd.workspace = true
pebble-game-io.workspace = true
parity-scale-codec.workspace = true
scale-info.workspace = true

[build-dependencies]
gear-wasm-builder.workspace = true
pebble-game-io.workspace = true

[dev-dependencies]
gtest.workspace = true
gclient.workspace = true
tokio.workspace = true

# It's necessary to include all metawasm crates in the workspace section, otherwise they'll be
# ignored by Cargo and won't be built.
[workspace]
# members = ["state", "xtask"]

[workspace.dependencies]
gstd = "1.7.1"
gmeta = "1.7.1"
gear-wasm-builder = "1.7.1"
gtest = "1.7.1"
gclient = "1.7.1"
pebble-game-io ={ path = "io" }
tokio = "1"
xshell = "0.2"
anyhow = "1"
parity-scale-codec = { version = "3", default-features = false }
scale-info = { version = "2", default-features = false }